Add environment variable template and secrets guidance

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Broker-agnostic example (.env.example)
 # ============================================
 # Environment Variables Template
 # Copy this file to `.env` and fill in values.
